--- a/readme
+++ b/readme
@@ -1,1 +1,4 @@
-'bm' 
+# Bircoin manager
+
+Application which let you oversee your current amount of bitocin.
+You can check real course and see charts and tables. 
