--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
-# Bircoin manager
+#Bitcoin manager
 
 Application which let you oversee your current amount of bitocin.
 You can check real course and see charts and tables. 
